Release workflow. Includes fake version for testing.